# rust-learn

./: Cargo.toml  README.md
learning/stage-01-basics/: README.md  checklist.md  notes-template.md
learning/stage-01-basics/projects/: 01-temperature-converter.md  02-fibonacci.md  03-calculator.md
learning/stage-02-ownership-borrowing/: README.md  checklist.md  notes-template.md
learning/stage-02-ownership-borrowing/projects/: 01-guess-number-plus.md
learning/stage-03-collections-modules-errors/: README.md  checklist.md  notes-template.md
learning/stage-03-collections-modules-errors/projects/: 01-cli-todo.md
src/: main.rs
src/stage01/: 01_variables.rs  02_functions.rs  03_control_flow.rs  04_struct_enum.rs  05_option_result.rs  calculator.rs  fibonacci.rs  temperature_converter.rs
src/stage02/: 01_ownership.rs  02_borrowing.rs  03_references_and_mut.rs  04_slice.rs  guess_number_plus.rs
src/stage03/: 01_vec.rs  02_hashmap.rs  03_modules.rs  04_result_and_question.rs  todo_cli.rs  todo_list_cli.rs
