[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"

[[bin]]
name = "stage01_01_variables"
path = "src/stage01/01_variables.rs"

[[bin]]
name = "stage01_02_functions"
path = "src/stage01/02_functions.rs"

[[bin]]
name = "stage01_03_control_flow"
path = "src/stage01/03_control_flow.rs"

[[bin]]
name = "stage01_04_struct_enum"
path = "src/stage01/04_struct_enum.rs"

[[bin]]
name = "stage01_05_option_result"
path = "src/stage01/05_option_result.rs"

[[bin]]
name = "temperature_converter"
path = "src/stage01/temperature_converter.rs"

[[bin]]
name = "fibonacci"
path = "src/stage01/fibonacci.rs"

[[bin]]
name = "calculator"
path = "src/stage01/calculator.rs"

[[bin]]
name = "stage02_01_ownership"
path = "src/stage02/01_ownership.rs"

[[bin]]
name = "stage02_02_borrowing"
path = "src/stage02/02_borrowing.rs"

[[bin]]
name = "stage02_03_references_and_mut"
path = "src/stage02/03_references_and_mut.rs"

[[bin]]
name = "stage02_04_slice"
path = "src/stage02/04_slice.rs"

[[bin]]
name = "stage02_guess_number_plus"
path = "src/stage02/guess_number_plus.rs"

[[bin]]
name = "stage03_01_vec"
path = "src/stage03/01_vec.rs"

[[bin]]
name = "stage03_02_hashmap"
path = "src/stage03/02_hashmap.rs"

[[bin]]
name = "stage03_03_modules"
path = "src/stage03/03_modules.rs"

[[bin]]
name = "stage03_04_result_and_question"
path = "src/stage03/04_result_and_question.rs"

[[bin]]
name = "stage03_todo_cli"
path = "src/stage03/todo_cli.rs"

[[bin]]
name = "stage03_todo_list_cli"
path = "src/stage03/todo_list_cli.rs"